tests/NormalTests/paczka1/small_fuzzy/32196495.err
Error in line 3: A106 S631 45,7
Error in line 11: PCn6 A743 48,3
Error in line 15: QY5 S737 3,3
